infra/policies/default-deny-dmz.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: dmz
spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
