infra/policies/default-deny-work.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: work
spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
